--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="boxscore">
+    <div class="boxscore mlb">
         <div class="boxscore__team boxscore__team--header">
           <label></label>
           <div class="boxscore__team__units">
@@ -84,7 +84,7 @@
         </div>
       </div>
       
-      <div class="boxscore">
+      <div class="boxscore nfl">
         <div class="boxscore__team boxscore__team--header">
           <label></label>
           <div class="boxscore__team__units">
