--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="boxscore__details">
-          <div class="boxscore__details__team boxscore__details__team--away" style="background: #203731">
+          <div class="boxscore__details__team boxscore__details__team--away">
             <p>
               <strong>JETS</strong><small>NYJ</small>
             </p>
@@ -131,7 +131,7 @@
           <div class="boxscore__details__info">
             <strong>Final</strong>
           </div>
-          <div class="boxscore__details__team boxscore__details__team--home" style="background: #002244">
+          <div class="boxscore__details__team boxscore__details__team--home">
             <p>
               <strong>PATRIOTS</strong><small>NE</small>
             </p>
