--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="styles.css" rel="stylesheet" />
+    <script src="scripts.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="boxscore mlb">
