--- a/index.html
+++ b/index.html
@@ -29,58 +29,58 @@
           </div>
         </div>
         <div class="boxscore__team boxscore__team--away">
-          <label>CHC</label>
+          <label id="away-abv">CHC</label>
           <div class="boxscore__team__units">
-            <span>1</span>
-            <span>0</span>
-            <span>2</span>
-            <span>0</span>
-            <span>0</span>
-            <span>0</span>
-            <span>0</span>
-            <span>1</span>
-            <span>1</span>
+            <span id="away-1">1</span>
+            <span id="away-2">0</span>
+            <span id="away-3">2</span>
+            <span id="away-4">0</span>
+            <span id="away-5">0</span>
+            <span id="away-6">0</span>
+            <span id="away-7">0</span>
+            <span id="away-8">1</span>
+            <span id="away-9">1</span>
           </div>
           <div class="boxscore__team__results">
-            <span>5</span>
-            <span>12</span>
-            <span>0</span>
+            <span id="away-r">5</span>
+            <span id="away-h">12</span>
+            <span id="away-e">0</span>
           </div>
         </div>
         <div class="boxscore__team boxscore__team--home">
-          <label>STL</label>
+          <label id="home-abv">STL</label>
           <div class="boxscore__team__units">
-            <span>0</span>
-            <span>0</span>
-            <span>0</span>
-            <span>3</span>
-            <span>0</span>
-            <span>0</span>
-            <span>0</span>
-            <span>0</span>
-            <span>1</span>
+            <span id="home-1">0</span>
+            <span id="home-2">0</span>
+            <span id="home-3">0</span>
+            <span id="home-4">3</span>
+            <span id="home-5">0</span>
+            <span id="home-6">0</span>
+            <span id="home-7">0</span>
+            <span id="home-8">0</span>
+            <span id="home-9">1</span>
           </div>
           <div class="boxscore__team__results">
-            <span>4</span>
-            <span>8</span>
-            <span>1</span>
+            <span id="home-r">4</span>
+            <span id="home-h">8</span>
+            <span id="home-e">1</span>
           </div>
         </div>
         <div class="boxscore__details">
           <div class="boxscore__details__team boxscore__details__team--away">
             <p>
-              <strong>Cubs</strong><small>CHC</small>
+              <strong id="away-masc">Cubs</strong><small id="away-abv2">CHC</small>
             </p>
-            <span>56-38</span>
+            <span id="away-rec">56-38</span>
           </div>
           <div class="boxscore__details__info">
-            <strong>Btm<br/>9th</strong>
+            <strong id="game-status">Btm<br/>9th</strong>
           </div>
           <div class="boxscore__details__team boxscore__details__team--home">
             <p>
-              <strong>Cardinals</strong><small>STL</small>
+              <strong id="home-masc">Cardinals</strong><small id="home-abv2">STL</small>
             </p>
-            <span>56-38</span>
+            <span id="home-rec">56-38</span>
           </div>
         </div>
       </div>
